2.x/features/teams.md
# Команды

[[toc]]

## Введение

Если Вы установили Jetstream использую опцию `--teams`, Ваше приложение будет построено для поддержки создания команды и управления ею.

Командные функции Jetstream позволяют каждому зарегистрированному пользователю создавать несколько команд и входить в них. По умолчанию каждый зарегистрированный пользователь будет входить в «Персональную» команду. Например, если пользователь с именем «Салли Джонс» создает новую учетную запись, он будет назначен в команду с именем «Команда Салли». После регистрации пользователь может переименовать эту команду или создать дополнительные команды.

![Скриншот команд Laravel](./../../assets/img/teams.png)

:::warning Команды Jetstream

Стуктура и мнения команды Jetstream могут работать не для всех приложений. Если это не работает для Вашего варианта использования, не стесняйтесь создавать приложение Jetstream, не основанное на команде, и вручную добавлять функциональные возможности команды в свое приложение на основе Ваших собственных потребностей.
:::

## Создание команды

Доступ к представлению создания команды осуществляется через раскрывающееся меню навигации пользователя в правом верхнем углу.

### Действия

Как и многие другие функции Jetstream, логику создания и удаления команды можно настроить, изменив соответствующие классы действий в каталоге `app/Actions/Jetstream`. Эти действия включают `CreateTeam`, `UpdateTeamName` и `DeleteTeam`. Каждое из этих действий вызывается, когда соответствующая задача выполняется пользователем в пользовательском интерфейсе приложения. Вы можете изменять эти действия по мере необходимости в зависимости от потребностей Вашего приложения.

### Представления / Страницы

При использовании стека Livewire представление создания команды отображается с использованием шаблона Blade `resources/views/teams/create-team-form.blade.php`. При использовании стека Inertia это представление отображается с использованием шаблона `resources/js/Pages/Teams/CreateTeamForm.vue`. Дополнительные поля ввода, указанные в формах создания команды, будут предоставлены классу действия `App\Actions\Jetstream\CreateTeam`, когда пользователь создаст команду.

## Проверка пользовательских команд

Доступ к информации о командах пользователя можно получить с помощью методов, предоставляемых трейтом `Laravel\Jetstream\HasTeams`. Этот трейт автоматически применяется к модели Вашего приложения `App\Models\User` во время установки Jetstream. Этот трейт предоставляет множество полезных методов, которые позволяют Вам проверять команды пользователя:

```php
// Доступ к выбранной в данный момент команде пользователя...
$user->currentTeam : Laravel\Jetstream\Team

// Доступ ко всем командам (включая собственные), к которым принадлежит пользователь...
$user->allTeams() : Illuminate\Support\Collection

// Доступ ко всем командам пользователя...
$user->ownedTeams : Illuminate\Database\Eloquent\Collection

// Доступ ко всем командам, к которым пользователь принадлежит, но не принадлежит...
$user->teams : Illuminate\Database\Eloquent\Collection

// Доступ к "личной" команде пользователя...
$user->personalTeam() : Laravel\Jetstream\Team

// Определите, владеет ли пользователь данной командой...
$user->ownsTeam($team) : bool

// Определите, принадлежит ли пользователь к данной команде...
$user->belongsToTeam($team) : bool

// Получить роль, назначенную пользователю в команде...
$user->teamRole($team) : \Laravel\Jetstream\Role

// Определите, имеет ли пользователь данную роль в данной команде...
$user->hasTeamRole($team, 'admin') : bool

// Доступ к массиву всех разрешений, которые пользователь имеет для данной команды...
$user->teamPermissions($team) : array

// Определите, есть ли у пользователя данное командное разрешение...
$user->hasTeamPermission($team, 'server:create') : bool
```

### Текущая команда

У каждого пользователя в приложении Jetstream есть «текущая команда». Это команда, для которой пользователь активно просматривает ресурсы. Например, если Вы создаете приложение-календарь, Ваше приложение будет отображать предстоящие события календаря для текущей команды пользователя.

Вы можете получить доступ к текущей команде пользователя, используя отношение Eloquent `$user->currentTeam`. Это отношение может использоваться для определения области других Ваших запросов Eloquent текущей командой пользователя:

```php
use App\Models\Calendar;

return Calendar::where(
    'team_id', $request->user()->currentTeam->id
)->get();
```

:::tip Смена команд

Пользователь может переключить свою текущую команду с помощью меню «переключателя команды», доступного на панели навигации Jetstream.
:::

### Командный объект

Объект команды, доступ к которому осуществляется через `$user->currentTeam` или другие запросы Eloquent, связанные с командой Jetstream, предоставляет множество полезных методов для проверки атрибутов и отношений команды:

```php
// Доступ к владельцу команды...
$team->owner : App\Models\User

// Получить всех пользователей команды, включая владельца...
$team->allUsers() : Illuminate\Database\Eloquent\Collection

// Получить всех пользователей команды, кроме владельца...
$team->users : Illuminate\Database\Eloquent\Collection

// Определите, является ли данный пользователь членом команды...
$team->hasUser($user) : bool

// Определите, есть ли в команде участник с данным адресом электронной почты...
$team->hasUserWithEmail($emailAddress) : bool

// Определите, является ли данный пользователь членом команды с данным разрешением...
$team->userHasPermission($user, $permission) : bool
```

## Управление участниками

Члены команды могут быть добавлены и удалены из команды через представление «Настройки команды» Jetstream. По умолчанию только владельцы команды могут управлять членством в команде. Это ограничение определяется в классе `App\Policies\TeamPolicy`. Естественно, Вы можете изменить эту политику по своему усмотрению.

### Действия управления участниками

Подобно процессу настройки других функций Jetstream, логика добавления членов команды может быть настроена путем изменения класса действия `App\Actions\Jetstream\AddTeamMember`. Метод класса `add` вызывается с текущим аутентифицированным пользователем, экземпляром `Laravel\Jetstream\Team`, адресом электронной почты пользователя, добавляемого в команду, и ролью (если применимо) пользователя, добавляемого в команду.

Это действие отвечает за проверку того, что пользователь действительно может быть добавлен в команду, а затем за добавление пользователя в команду. Вы можете настроить это действие в соответствии с потребностями Вашего конкретного приложения.

Удаление члена команды можно настроить, изменив класс действия `App\Actions\Jetstream\RemoveTeamMember`.

### Представления / Страницы управления участниками

При использовании стека Livewire представление менеджера членов команды отображается с использованием шаблона Blade `resources/views/teams/team-member-manager.blade.php`. При использовании стека Inertia это представление отображается с использованием шаблона `resources/js/Pages/Teams/TeamMemberManager.vue`. Как правило, эти шаблоны не требуют настройки.

### Приглашения

По умолчанию Jetstream просто добавит любого существующего пользователя приложения, указанного Вами, в Вашу команду. Однако многие приложения отправляют приглашения по электронной почте пользователям, приглашенным в команды. Если у пользователя нет учетной записи, электронное письмо с приглашением может предложить ему создать учетную запись и принять приглашение. Или, если у пользователя уже есть учетная запись, он может принять или проигнорировать приглашение.

К счастью, Jetstream позволяет включать приглашения членов команды для Вашего приложения с помощью всего нескольких строк кода. Для начала передайте опцию `invitations` при включении функции «команды» для Вашего приложения. Это можно сделать, изменив массив `features` в файле конфигурации `config/jetstream.php` Вашего приложения:

```php
use Laravel\Jetstream\Features;

'features' => [
    Features::termsAndPrivacyPolicy(),
    Features::profilePhotos(),
    Features::api(),
    Features::teams(['invitations' => true]),
    Features::accountDeletion(),
],
```

После того, как Вы включите функцию приглашений Jetstream, пользователи, приглашенные в команды, получат электронное письмо с приглашением со ссылкой для принятия приглашения в команду. Пользователи не будут полноправными членами команды, пока приглашение не будет принято.

#### Действия с приглашением

Когда пользователя приглашают в команду, действие Вашего приложения `App\Actions\Jetstream\InviteTeamMember` будет вызываться с текущим аутентифицированным пользователем, командой, в которую приглашен новый пользователь, адресом электронной почты приглашенного пользователя и, необязательно, роль, которая должна быть назначена пользователю после того, как он присоединится к команде. Вы можете просмотреть это действие или изменить его в зависимости от потребностей Вашего собственного приложения.

:::tip Laravel Mail

Перед использованием функции приглашения в команду Вы должны убедиться, что Ваше приложение Laravel настроено на [отправку электронных писем](https://getlaravel.ru/docs/mail). В противном случае Laravel не сможет отправлять электронные письма с приглашением в команду пользователям Вашего приложения.
:::

## Роли / Разрешения

Каждому члену команды, добавленному в команду, может быть назначена определенная роль, и каждой роли назначается набор разрешений. Разрешения ролей определяются в классе Вашего приложения `App\Providers\JetstreamServiceProvider` с помощью метода `Jetstream::role`. Этот метод принимает «слаг» для роли, удобное для пользователя имя роли, разрешения роли и описание роли. Эта информация будет использоваться для отображения роли в представлении управления членами команды.

Например, представьте, что мы создаем приложение для управления сервером, такое как [Laravel Forge](https://forge.laravel.com). Мы могли бы определить командные роли нашего приложения следующим образом:

```php
Jetstream::defaultApiTokenPermissions(['read']);

Jetstream::role('admin', 'Administrator', [
    'server:create',
    'server:read',
    'server:update',
    'server:delete',
])->description('Пользователи-администраторы могут выполнять любые действия.');

Jetstream::role('support', 'Support Specialist', [
    'server:read',
])->description('Специалисты службы поддержки могут читать информацию о сервере.');
```

:::tip Поддержка API команды

Когда Jetstream устанавливается с поддержкой команды, доступные разрешения API автоматически выводятся путем объединения всех уникальных разрешений, доступных для ролей. Следовательно, отдельный вызов метода `Jetstream::permissions`.
:::

### Авторизация

Конечно, Вам понадобится способ авторизации того, что входящие запросы, инициированные членом команды, могут действительно выполняться этим пользователем. Разрешения команды пользователя могут быть проверены с помощью метода `hasTeamPermission`, доступного через трейт `Laravel\Jetstream\HasTeams`.

**Обычно нет необходимости проверять роль пользователя. Вам нужно только проверить, есть ли у пользователя конкретное разрешение.** Роли - это просто презентационная концепция, используемая для группировки гранулярных разрешений. Обычно вызовы этого метода выполняются в [политиках авторизации](https://getlaravel.ru/docs/authorization) приложения:

```php
return $user->hasTeamPermission($server->team, 'server:update');
```

### Объединение разрешений команды с разрешениями API

При создании приложения Jetstream, которое обеспечивает как поддержку API, так и поддержку команды, Вы должны проверить разрешения команды **и** разрешения токена API входящего запроса в рамках политик авторизации Вашего приложения. Это важно, потому что токен API может иметь теоретическую способность выполнять действие, в то время как пользователю фактически не предоставлено это действие через разрешения его команды:

```php
/**
 * Определите, может ли пользователь обновлять полет.
 *
 * @param  \App\Models\User  $user
 * @param  \App\Models\Flight  $flight
 * @return bool
 */
public function view(User $user, Flight $flight)
{
    return $user->belongsToTeam($flight->team) &&
           $user->hasTeamPermission($flight->team, 'flight:view') &&
           $user->tokenCan('flight:view');
}
```
